# gazebo_rl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.md~  package.xml
cable_joint_description/: CMakeLists.txt  package.xml
cable_joint_gazebo/: CMakeLists.txt  package.xml
config/: crib_env_params.yaml  crib_qlearn_params.yaml  qlearn_params.yaml
docs/: computer_configuration_guide.md
launch/: #turtlebot_maze.launch#  .#turtlebot_maze.launch  cable_joint.launch  cable_joint_and_target.launch  qlearn_crib.launch  start_qlearning.launch  turtlebot_anothermaze.launch  turtlebot_circuit2.launch  turtlebot_crib.launch  turtlebot_empty.launch  turtlebot_large_crib.launch  turtlebot_maze.launch  turtlebot_playground.launch  turtlebot_round.launch
scripts/: #ql_nav.py#  .#ql_nav.py  crib_env_test.py  crib_nav_nn_shoot.py  crib_nav_nn_shoot_.py  crib_nav_nn_shoot_v1.py  crib_nav_qnet.py  crib_nav_qtable.py  gym_test.py  learn_model.py  mpc_train.py  ql_nav.py  qlearn.py  random_sample_test.py  start_qlearning.py  temp.py  utils.py
training_results/: openaigym.episode_batch.0.10556.stats.json  openaigym.episode_batch.0.16626.stats.json  openaigym.episode_batch.0.18151.stats.json  openaigym.episode_batch.0.24993.stats.json  openaigym.episode_batch.0.4620.stats.json  openaigym.episode_batch.0.6587.stats.json  openaigym.manifest.0.10556.manifest.json  openaigym.manifest.0.16626.manifest.json  openaigym.manifest.0.18151.manifest.json  (+3 more)
worlds/cable_world/: CMakeLists.txt  cable_force_plugin.cpp.bak  cable_joint.world  cable_joint_and_target.world
(+135 files in other folders)
